--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Arjun's Cookie Clicker Mods</h1>
     <p>Some mods that I've made for Cookie Clicker:</p>
     <ul>
-        <li><a href="/plantableJQB.js" target="_blank">Plantable JQB Mod</a></li>
+        <li><a href="/CookieClicker-mods/plantableJQB.js" target="_blank">Plantable JQB Mod</a></li>
     </ul>
 </body>
 </html>
